# ros2_robot_project

./: .gitignore
Lab1/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
src/Lab2_Exo1/: package.xml  setup.cfg  setup.py
src/Lab2_Exo1/Lab2_Exo1/: calculator_client.py  calculator_server.py
src/Lab2_Exo1/srv/: Calculator.srv
src/Lab3_Exo1/: package.xml  setup.cfg  setup.py
src/Lab3_Exo1/Lab3_Exo1/: emergency_stop.py  test_emergency.py
src/lab4_exo1/: CMakeLists.txt  package.xml
src/lab4_exo1/msg/: TemperatureSensor.msg
src/lab4_exo1/scripts/: test_temperature.py
src/lab4_exo2/: package.xml  setup.cfg  setup.py
src/lab4_exo2/lab4_exo2/: config_client.py  config_server.py
src/lab4_exo2/srv/: ConfigureRobot.srv
src/lab5_exo2/: package.xml  setup.cfg  setup.py
src/lab5_exo2/config/: pid_aggressive.yaml  pid_conservative.yaml  pid_test.yaml
src/lab5_exo2/lab5_exo2/: pid_controller.py
src/my_package/: package.xml  setup.py
src/my_package/my_package/: simple_publisher.py
src/warehouse_robot/: README.md  package.xml  setup.py
src/warehouse_robot/warehouse_robot/: robot_controller.py  robot_strategies.py
