<?xml version="1.0"?>
<package format="3">
  <name>Lab2_Exo1</name>
  <version>0.0.0</version>
  <description>Calculator Service</description>
  <maintainer email="assimarcaurele@example.com">assimarcaurele</maintainer>
  <license>Apache-2.0</license>

  <!-- CES 5 LIGNES SONT OBLIGATOIRES -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>